# recigen

./: .gitignore  pyproject.toml
.github/workflows/: main.yml
recigen/: __main__.py  cran.py  default_maintainer.py  generate.py  package_type.py
recigen/cran/: __init__.py  cran.py  get_pkg_description.py  licences.py  r_utils.py
recigen/templates/: r_cran_recipe_template.yaml
tests/: test_recigen.py
