[project]
authors = [{name = "DerThorsten", email = "derthorstenbeier@gmail.com"}]
dependencies = [
    "requests",
    "rpy2",
    "beautifulsoup4",
    "ruamel.yaml",
    "diskcache",
    "tqdm",
    "pandas"
]
name = "recigen"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
recigen = "recigen.__main__:main"


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64", "linux-aarch64", "win-64"]


[project.optional-dependencies]
test = ["pytest"]
all = ["recigen[test]"]


[tool.pixi.environments]
default = {features = [], solve-group = "default"}
test = {features = ["test"], solve-group = "default"}
all = {features = ["all"], solve-group = "default"}


[tool.pixi.pypi-dependencies]
recigen = { path = ".", editable = true }


[tool.pixi.tasks]
start = "python my_project/main.py"
lint = "ruff lint"

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.feature.test.tasks]
test = "pytest"

